--- a/styles/_fonts.styl
+++ b/styles/_fonts.styl
@@ -32,7 +32,7 @@ includeIcon($char, $color)
     color: $color
     font-family: 'icons'
     font-style: normal
-    margin-right: 0.2em
+    margin-right: 0.4em
 
 $githubIcon($color='inherit')
     includeIcon('\e800', $color)
