--- a/styles/layout.styl
+++ b/styles/layout.styl
@@ -3,7 +3,7 @@ body > header
     .title
         display: block
         padding: 1rem 0
-        margin-bottom: 2rem
+        margin-bottom: 3rem
         border: none
         background: none
         clearfix()
